--- a/client/src/components/collections/FormModal.css
+++ b/client/src/components/collections/FormModal.css
@@ -66,7 +66,8 @@
   }
   
   form {
-    background-color: #EFEFEF;
+    background-color: #6d7180;
     padding: 20px;
     border-radius: 8px;
+    color: #fff;
   }
