--- a/client/src/components/home/fileUpload/FileUploadForm.css
+++ b/client/src/components/home/fileUpload/FileUploadForm.css
@@ -1,7 +1,7 @@
 .alert {
-    position: fixed;
-    top: 100px;
-    right: 20px;
+    /* position: fixed;
+    top: 0px;
+    right: 20px; */
     padding: 10px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
