--- a/client/src/components/collections/collections.css
+++ b/client/src/components/collections/collections.css
@@ -1,3 +1,11 @@
+:root {
+  --new_collection_button: #16a085;
+  --white_color: #fff;
+  --delete_button: #eb1f1f;
+  --shadow: rgba(0,0,0,0.1);
+  --nth_child_color: #34495E;
+}
+
 .collections-page {
   display: flex;
   flex-direction: column;
@@ -14,7 +22,6 @@
   align-items: center;
 }
 
-/* Styling for buttons */
 .collections-page {
   display: flex;
   align-items: center;
@@ -22,27 +29,25 @@
 }
 
 .collections-page .new-collection-button {
-  background-color: #16a085;
+  background-color: var(--new_collection_button);
   border: none;
   border-radius: 5px;
   padding: 10px 15px;
-  color: white;
+  color: var(--white_color);
   cursor: pointer;
   font-size: 18px;
   transition: background-color 0.3s;
 }
 
-
 .collections-page .delete-icon {
-  background-color: red;
-  color: #fff;
+  background-color: var(--delete_button);
+  color: var(--white_color);
   border-radius: 5px;
   font-size: 20px;
   padding: 10px 15px;
   margin: 0px 40px;
 }
 
-/* Collection list styling */
 .collections-page .collection-list {
   display: flex;
   flex-direction: column;
@@ -52,7 +57,6 @@
 
 
 .collections-page .collection-name-button {
-  background-color: #205375;
   border-radius: 5px;
   padding: 10px 20px;
   margin-top: 5px;
@@ -60,22 +64,13 @@
   text-align: center;
   cursor: pointer;
   transition: all 0.3s;
-  color: #fff;
+  color: var(--white_color);
 }
 
-.collections-page .collection-name-button:hover {
-  background-color: #3b8cc2;
+.collections-page .collection-name-button:nth-child(odd) {
+  background-color: var(--nth_child_color);
 }
 
-
-.collection-options {
-  position: fixed;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  background: white;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-  z-index: 1000;
+.collections-page .collection-name-button:nth-child(even) {
+  background-color: var(--new_collection_button);
 }
