--- a/client/src/components/favorites/favorites.css
+++ b/client/src/components/favorites/favorites.css
@@ -1,8 +1,16 @@
+:root {
+  --white_color: #fff;
+  --delete_button: #eb1f1f;
+  --grey_color: #ccc;
+  --hover_delete_button: #f01b1b;
+}
+
+
 .delete-button {
     margin-top: 15px;
     padding: 5px 10px;
-    background-color: #C40C0C;
-    color: white;
+    background-color: var(--delete_button);
+    color: var(--white_color);
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -10,7 +18,7 @@
   }
   
   .delete-button:hover {
-    background-color: #f01b1b;
+    background-color: var(--hover_delete_button);
   }
   
   .text-left {
