--- a/client/src/components/home/fileUpload/FileUploadForm.css
+++ b/client/src/components/home/fileUpload/FileUploadForm.css
@@ -1,7 +1,19 @@
+:root {
+  --bg_sucess: #d4edda;
+  --c_success: #155724;
+  --border_success: #c3e6cb;
+  
+  --bg_error: #f8d7da;
+  --c_error: #f01b1b;
+  --border_error: #f5c6cb;
+
+  --bg_warning: #fff3cd;
+  --c_warning: #856404;
+  --border_warning: #ffeeba;
+}
+
+
 .alert {
-    /* position: fixed;
-    top: 0px;
-    right: 20px; */
     padding: 10px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
@@ -9,21 +21,21 @@
   }
   
   .alert.success {
-    background-color: #d4edda;
-    color: #155724;
-    border: 1px solid #c3e6cb;
+    background-color: var(--bg_sucess);
+    color: var(--c_success);
+    border: 1px solid var(--border_success);
   }
   
   .alert.error {
-    background-color: #f8d7da;
-    color: #721c24;
-    border: 1px solid #f5c6cb;
+    background-color: var(--bg_error);
+    color: var(--c_error);
+    border: 1px solid var(--border_error);
   }
   
   .alert.warning {
-    background-color: #fff3cd;
-    color: #856404;
-    border: 1px solid #ffeeba;
+    background-color: var(--bg_warning);
+    color: var(--c_warning);
+    border: 1px solid var(--border_warning);
   }
   
   @keyframes fadeInOut {
